--- a/index.html
+++ b/index.html
@@ -4,18 +4,24 @@
 <head>
   <meta charset="UTF-8">
   <title>Subir Excel</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.16.9/xlsx.full.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.3.2/html2canvas.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.3.1/jspdf.umd.min.js"></script>
 </head>
 
-<body>
-  <input type="file" id="upload"
-    accept=".csv, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel" />
-  <button id="loadExcel">Cargar Excel</button>
-  <button id="downloadPDFs" disabled>Descargar Documentos</button>
-
+<body class="bg-light">
+  <div class="container mt-5">
+    <h1 class="text-center mb-4">Cargador de Documentos</h1>
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <input type="file" id="upload" class="form-control mb-3"
+          accept=".csv, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel" />
+        <button id="downloadPDFs" class="btn btn-primary btn-block" disabled>Descargar Documentos</button>
+      </div>
+    </div>
+  </div>
 
   <script src="script.js"></script>
 </body>
